# Tasks

./: CMakeLists.txt  README.md
Oving1/: b.cpp  main.cpp
Oving2/: cube.cpp
Oving3/: rubiks.cpp
Oving4/: rubiksoglys.cpp
Oving5/: rubiksogmaterial.cpp
Oving6/: rubikstexture.cpp
